style.css
/* ... */
.join-course-button:hover {
  cursor: pointer;
  color: #dedede;
  background: transparent;
}

.join-course-image {
  width: 80%;
  transition: all 0.2s linear;
  filter: drop-shadow(3px 3px 5px #9c9c9c9d);
}
.join-course-image:hover {
  transform: scale(1.03);
}

/* fixing the course card width and layout in bigger screens */
@media (min-width: 900px) {
  .course-card {
    display: flex;
    flex-direction: row;
    width: 95%;
  }
  .course-card-texts {
    flex: 2;
  }
  .course-card-image-box {
    flex: 1;
  }

  /* removing the given margins for the course card text div contents */
  .course-card-texts h2,
  .course-card-texts p,
  .join-course-button {
    margin-left: 0;
  }

  .course-card-texts {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    padding: 0 30px;
  }
}

/* ///////////////////// */
/* Testimonials Section */
/* /////////////////// */
.testimonials {
  padding: 10px;
}

/* 'What our students say' card */
.testimonials-card {
  margin: 30px 30px 50px 30px;
  background-color: #f7f1ff;
  padding: 20px;
  border-radius: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* testimonials title, heading, description, google rating */
.testimonials-texts-rating {
  display: flex;
  flex-direction: column;
  padding: 15px 10px;
  align-items: center;
  text-align: center;
}

.testimonials-title {
  font-weight: 500;
  margin: 20px 0 0 0;
}

.testimonials-heading {
  font-size: 35px;
  font-family: "Prompt", serif;
  color: #361457;
  font-weight: 600;
  margin: 0 0 10px 0;
}

.testimonials-desc {
  color: #3b3b3b;
  margin: 10px 15px;
}

.testimonials-texts-rating img {
  width: 70%;
  margin: 15px 10px;
  transition: all 0.3s linear;
}
.testimonials-texts-rating img:hover {
  transform: scale(1.03);
}

.testimonials-personal {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  border-radius: 15px;
  padding: 20px;
  background-color: #ffffff;
}

.testimonials-personal img {
  transform: scale(0.8);
  margin-top: 10px;
}
.testimonials-review p {
  color: #3b3b3b;
  line-height: 28px;
  margin: 15px 0 0 0;
}
.testimonials-review h4 {
  margin: 20px 0;
}

.testimonials-button {
  padding: 10px 25px;
  border: 1px solid #562b80;
  background: transparent;
  color: #562b80;
  border-radius: 15px;
  cursor: pointer;
  font-size: 17px;
  margin: 50px 0 0 0;
  transition: all 0.3s ease-in-out;
}
.testimonials-button:hover {
  color: #dedede;
  background-color: #331b50;
}

.desktop-testimonial-cards {
  display: none;
}

/* Making the mobile card invisible and desktop cards visible when width is 1000px*/
@media (min-width: 1000px) {
  .testimonials-personal {
    display: none;
  }

  .desktop-testimonial-cards {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    gap: 25px;
  }

  .testimonials-desktop {
    flex: 1;
    max-width: 500px;
    background-color: #ffffff;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 15px;
    border-radius: 15px;
  }

  .testimonials-desktop p {
    color: #3b3b3b;
    line-height: 28px;
    margin: 15px 0 0 0;
  }

  .testimonials-desktop img {
    transform: scale(0.8);
  }
}

/* ////////////////// */
/* Enquiry section// */
/* //////////////// */
.enquiry {
  background: linear-gradient(220deg, #391268 30%, #3f1f65 70%);
}

.enquiry-contents {
  padding: 30px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.enquiry-form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* enquiry section headings and texts */
.enquiry-head-section {
  text-align: center;
}
.enquiry-title {
  font-weight: 500;
  color: #dedede;
  margin: 40px 0 2px 0;
}
.enquiry-heading {
  font-size: 35px;
  color: #f0f0f0;
  font-family: "Prompt", serif;
  font-weight: 600;
  margin: 0 0 15px 0;
}
.enquiry-desc {
  color: #e2e2e2;
  margin: 0 10px 20px 10px;
}

.enquiry-image {
  max-width: 250px;
}

/* form contents */
.enquiry-form-body {
  display: flex;
  flex-direction: column;
  border: 2px solid red;
  width: 95%;
}

.enquiry-form-body textarea {
  resize: vertical;
  min-height: 100px;
}

input,
select,
textarea {
  width: 100%;
  margin: 10px 0;
  padding: 10px;
  border-radius: 10px;
  border: none;
  color: #ffffff;
  background: linear-gradient(145deg, #623796 40%, #673b9d 60%);
}

input::placeholder,
textarea::placeholder {
  color: #ffffff;
  background: linear-gradient(145deg, #623796 40%, #673b9d 60%);
}

select option {
  background-color: #502d7c;
}

/* reference areas */

@media (min-width: 750px) {
  .enquiry-desc {
    max-width: 600px;
    margin: 0 0 20px 0;
  }

  .enquiry-form-body {
    border: 3px solid yellow;
    max-width: 500px;
  }
}

/* ////////////// */

